# simple-cli

./: Cargo.toml  README.md
examples/: favorite_color.rs  guessing_game.rs  safari.rs
src/: lib.rs  main.rs
