[package]
name = "simple-io"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/baartmans2/simple-io"
keywords = ["input", "console", "cli", "text", "output"]
exclude = ["examples/"]
categories = ["command-line-interface"]
description = """
A simple interface for handling command-line input and output in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"